--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^16.11.0",
     "react-redux": "^7.1.3",
     "react-scripts": "^3.2.0",
+    "react-select": "^4.3.1",
     "react-toastify": "^5.4.0",
     "react-use": "^13.6.3",
     "rebound": "^0.1.0",
@@ -42,6 +43,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@types/react-select": "^4.0.15",
     "@typescript-eslint/eslint-plugin": "^2.7.0",
     "@typescript-eslint/parser": "^2.7.0",
     "concurrently": "^5.0.0",
